Design Details Activity

--- a/app/src/main/res/drawable/back_profile.xml
+++ b/app/src/main/res/drawable/back_profile.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#68BAB9"/>
+    <solid android:color="#5DAFF1"/>
     <corners android:topLeftRadius="20dp" android:topRightRadius="20dp"/>
 </shape>
