--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -603,7 +603,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:fontFamily="@font/arbutus_slab"
-                android:text="Additional Information of Hostel Advertisement: "
+                android:text="Additional Information About Hostel &amp; Advertisement Post"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold" />
